# Codam_AI_Community

./: .env.example  .gitignore  ASSIGNMENTS.md  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
business_cases/: README.md
business_cases/01_retail_catalog_harmonization/: README.md
business_cases/02_finance_invoice_ingestion/: README.md
business_cases/03_insurance_claims_intake/: README.md
capstones/: README.md
capstones/01_doc_assistant_rag/: README.md  hint.md  peer_review.md
capstones/02_ops_agent/: README.md  hint.md  peer_review.md
capstones/03_llm_gateway/: README.md  hint.md  peer_review.md
codam_ai_labs/: __init__.py  __main__.py  business_cases.py  capstones.py  checks.py  cli.py  config.py  exercises.py  llm_client.py  menu.py  mock_server.py  review.py  runtime.py  session.py  terminal_ui.py  terminal_viewer.py  verify.py  view_file.py
codamlings/: __init__.py  __main__.py  capstones.py  checks.py  cli.py  config.py  exercises.py  llm_client.py  mock_server.py  review.py  verify.py
core/: README.md
modules/: README.md
modules/advanced_patterns/: README.md
modules/agents/: README.md
modules/embeddings/: README.md
modules/local_llm/: README.md
modules/mcp/: README.md
modules/ollama/: README.md
modules/production/: README.md
scripts/: add_mcp_security_modules.py  add_ollama_module.py  add_peer_review.py  check_solutions.py  generate_assignments.py  generate_modules.py  port_cpp_solutions.py  port_mcp_security_cpp.py  port_ollama_cpp.py  rename_to_codam_ai_labs.py  reset_student_stubs.py  verify_extended.py
(+576 files in other folders)
