[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codam-ai-labs"
version = "0.1.0"
description = "Codam AI Labs — interactive AI exercises for Python and C++"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codam-labs = "codam_ai_labs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codam_ai_labs*"]
